[tool.poetry]
name = "traces"
version = "0.5.4"
description = "A library for unevenly-spaced time series analysis."
authors = ["Mike Stringer <mike.stringer.internet@gmail.com>"]
license = "MIT license"
readme = 'README.md'
homepage = 'https://traces.readthedocs.io'
repository = 'https://github.com/datascopeanalytics/traces'
documentation = 'https://traces.readthedocs.io'
keywords = ['traces', 'time series', 'event driven', 'data analysis']
classifiers = [
    'Development Status :: 4 - Beta',
    "Operating System :: OS Independent",
    'Intended Audience :: Developers',
    "Intended Audience :: Science/Research",
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet",
    "Topic :: Internet :: Log Analysis",
]

[tool.poetry.dependencies]
python = "^3.6.1"
sortedcontainers = "^2.1.0"
infinity = "^1.4"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
cprofilev = "^1.0.7"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-xdist = "^1.31.0"
black = "^19.10b0"
scipy = "^1.4.1"
numpy = "^1.18.2"
pandas = "^1.0.3"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

